plugins {
    id 'java'
    id 'org.springframework.boot' version "${spring_boot_version}"
    id 'com.google.cloud.tools.jib' version '3.5.3'
}

group = 'me.mzalietin.mdbproject'
version = "${version}"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    implementation "org.springframework.boot:spring-boot-starter:${spring_boot_version}"

    implementation project(':movie')
    implementation project(':user')
    implementation project(':movie-review')
    implementation project(':movie-rating-aggregator')
    implementation project(':query-service')
}

test {
    useJUnitPlatform()
}

dependencyAnalysis {
    issues {
        all {
            onAny {
                severity("fail")
            }
        }
    }
}

jib {
    from {
        image = "gcr.io/distroless/java17-debian13"
    }
    to {
        image = "mzalietin/mdb-aggregator:${version}"
    }
    container {
        user = "nonroot"
        ports = ["8080"]
        jvmFlags = [
            "-XX:+UseContainerSupport",
            "-XX:MaxRAMPercentage=75",
            "-XX:+UseZGC",
            "-XX:+ExitOnOutOfMemoryError"
        ]
    }
}
